# DeeP-ython

./: 404.html  README.KO.md  README.md  index.html  mkdocs-ko.yml  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: deploy.yml
1-the-history-and-the-future-of-gil-in-cpython/: index.html
docs/en/: 1-the-history-and-the-future-of-gil-in-cpython.md  CNAME  index.md  tags.md
docs/ko/: 1-파이썬의-길-gil-을-걸어보기.md  index.md  tags.md
ko/: 404.html  index.html  sitemap.xml
ko/1-파이썬의-길-gil-을-걸어보기/: index.html
ko/search/: search_index.json
ko/tags/: index.html
resources/: main.html
search/: search_index.json
tags/: index.html
